--- a/pgpass.conf
+++ b/pgpass.conf
@@ -1,1 +1,7 @@
-localhost:5432:*:postgres:20911980
+# PostgreSQL şifre dosyası
+# Bu dosyayı C:\Users\[kullanıcı_adı]\AppData\Roaming\postgresql\ klasörüne kopyalayın
+# Format: hostname:port:database:username:password
+
+localhost:5432:dukkadee_dev:postgres:20911980
+localhost:5432:dukkadee_test:postgres:20911980
+localhost:5432:postgres:postgres:20911980
