--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,44 @@
-version: '3.8'
+version: '3'
 
 services:
-  db:
-    image: postgres:14
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
+  postgres:
+    image: postgres:15
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: dukkadee_dev
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=20911980
+      - POSTGRES_DB=dukkadee_dev
     ports:
       - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    networks:
+      - dukkadee_network
 
-  web:
-    build: 
+  app:
+    build:
       context: .
       dockerfile: Dockerfile
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=20911980
+      - POSTGRES_HOST=postgres
+      - POSTGRES_DB=dukkadee_dev
+      - POSTGRES_TEST_DB=dukkadee_test
+      - PORT=4003
+      - SECRET_KEY_BASE=BurasıÇokGizliDoldurun
+      - MIX_ENV=dev
+    ports:
+      - "4003:4003"
+    depends_on:
+      - postgres
     volumes:
       - .:/app
-    ports:
-      - "4000:4000"
-    depends_on:
-      - db
-    environment:
-      DATABASE_URL: postgres://postgres:postgres@db:5432/dukkadee_dev
-      MIX_ENV: dev
+    networks:
+      - dukkadee_network
+
+networks:
+  dukkadee_network:
+    driver: bridge
 
 volumes:
   postgres_data:
